fixed nav overlap with footer

--- a/src/pages/Options/Home/MarketHeader/media.scss
+++ b/src/pages/Options/Home/MarketHeader/media.scss
@@ -19,6 +19,7 @@
                 width: 256px !important;
                 height: 100%;
                 overflow: auto !important;
+                z-index: 1001 !important;
                 &::-webkit-scrollbar {
                     width: 0px;
                 }
